--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Head Title thing</title>
+</head>
+<body>
+    <h1>Header</h1>
+
+    <img src="https://cdn.esawebb.org/archives/images/screen/weic2216b.jpg" alt="Spcae Picture" />
+
+    <UL>
+        <li>List Item</li>
+    </UL>
+</body>
+</html>
